Revert "index video from url"
This reverts commit ceed940cab189e7f87df1390ca558c7560c09137.

Revert commit to main branch without PR
